# tarn

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MARKET_RESEARCH.md  MARKET_RESEARCH_BRIEF_2026-03-28.md  MARKET_RESEARCH_FULL_2026-03-28.md  PRE_RELEASE_TASKS_2026-03-29.md  PRE_RELEASE_TASKS_FROM_REVIEW_2026-03-29.md  README.md  RELEASE-READINESS.md  RELEASE_READINESS_REVIEW_2026-03-29.md  RETROSPECTIVE.md  ROADMAP.md  SYNTHESIS.md  action-install.sh  action-run.sh  action.yml  glama.json  install.sh  spec.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  vscode-extension-release.yml  vscode-extension.yml  zed-mirror-release.yml
demo-server/: Cargo.toml
demo-server/src/: main.rs
docs/: AI_WORKFLOW_DEMO.md  INDEX.md  MCP_WORKFLOW.md  RELEASE_VERIFICATION.md  TARN_COMPETITIVENESS_ROADMAP.md  TARN_LSP.md  TROUBLESHOOTING.md  VSCODE_EXTENSION.md  commands.json
docs/launch/: CHANNELS.md  COMPARISON.md  REDDIT_CLAUDEAI.md  REDDIT_MCP.md  SHOW_HN.md
docs/site/: 404.html  ai-workflows.html  ci-usage.html  cli-reference.html  examples.html  getting-started.html  index.html  mcp.html  overview.html  reference.html  styles.css  tarn-lsp.html  test-files.html  troubleshooting.html  writing-tests.html
docs/site/reference/: assertions.html  builtins.html  failure-categories.html  json-report.html  lsp-capabilities.html  mcp-tools.html  yaml-format.html
editors/claude-code/.claude-plugin/: marketplace.json
editors/claude-code/tarn-lsp-plugin/: README.md
editors/claude-code/tarn-lsp-plugin/.claude-plugin/: plugin.json
editors/opencode/: README.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.config.mjs  package-lock.json  package.json  package.nls.json
editors/vscode/docs/: LSP_MIGRATION.md
editors/vscode/l10n/: bundle.l10n.json
editors/vscode/media/marketplace/: README.md
editors/vscode/media/walkthrough/: install.md
editors/vscode/src/: api.ts  config.ts  extension.ts  version.ts
editors/vscode/src/backend/: TarnBackend.ts  TarnMcpClient.ts  TarnProcessRunner.ts  binaryResolver.ts  selectBackend.ts
editors/vscode/src/commands/: bench.ts  importHurl.ts  index.ts
editors/vscode/src/language/: SymbolProviders.ts
editors/vscode/src/lsp/: client.ts  tarnLspResolver.ts
editors/vscode/src/testing/: ResultMapper.ts  TestController.ts  discovery.ts  runHandler.ts
editors/vscode/src/util/: schemaGuards.ts
editors/vscode/src/views/: BenchRunnerPanel.ts  EnvironmentsView.ts  FixPlanView.ts  ReportWebview.ts  RunHistoryView.ts
editors/vscode/tests/golden/: api.snapshot.txt
editors/vscode/tests/integration/: runTest.ts
editors/vscode/tests/unit/: ResultMapper.test.ts  apiSurface.test.ts  benchRunnerPanel.test.ts  captureSymbols.test.ts  fixPlanView.test.ts  importHurl.test.ts  lspClient.test.ts  reportWebview.test.ts  runHistoryStore.test.ts  schemaGuards.test.ts  selectBackend.test.ts  tarnLspResolver.test.ts  tarnMcpClient.test.ts  version.test.ts
editors/zed/: README.md
editors/zed/src/: tarn.rs
examples/: assertions.tarn.yaml  auth.tarn.yaml  crud.tarn.yaml  minimal.tarn.yaml  tarn.config.yaml  tarn.env.yaml  variables.tarn.yaml
examples/demo-server/: auth-user-lifecycle.tarn.yaml  cookies.tarn.yaml  error-responses.tarn.yaml  form-and-text.tarn.yaml  hello-world.tarn.yaml  redirects.tarn.yaml  tarn.env.yaml
examples/init/: auth-flow.tarn.yaml  health.tarn.yaml  polling-job.tarn.yaml
examples/public-api/: httpbin.tarn.yaml  jsonplaceholder.tarn.yaml  tarn.env.yaml
hive/: Cargo.toml
hive/src/: bench.rs  lib.rs  main.rs  model.rs  runner.rs
hive/tests/: integration_test.rs
plugin/.claude-plugin/: plugin.json
plugin/skills/tarn-api-testing/: SKILL.md
plugin/skills/tarn-api-testing/references/: json-output.md  mcp-integration.md  yaml-format.md
schemas/v1/: report.json  testfile.json
scripts/ci/: smoke.sh
scripts/release/: render-homebrew-formula.sh
tarn/: Cargo.toml
tarn-lsp/: Cargo.toml
tarn-lsp/schemas/v1/: testfile.json
tarn-lsp/src/: capabilities.rs  code_lens.rs  commands.rs  completion.rs  debounce.rs  definition.rs  diagnostics.rs  envelope.rs  explain_failure.rs  fixtures.rs  formatting.rs  hover.rs  identifier.rs  jsonpath_eval.rs  lib.rs  main.rs  references.rs  rename.rs  server.rs  symbols.rs  token.rs
tarn-lsp/src/code_actions/: extract_env.rs  mod.rs  response_source.rs
tarn-lsp/tests/: code_actions_test.rs  code_lens_test.rs  commands_manifest_test.rs  definition_test.rs  diagnostics_test.rs  example_explain.rs  initialize_test.rs  jsonpath_test.rs  non_tarn_yaml_gating_test.rs  symbols_test.rs
tarn-mcp/: Cargo.toml
tarn-mcp/src/: lib.rs  main.rs  protocol.rs  tools.rs
tarn-mcp/tests/: artifact_tools_test.rs  cwd_integration_test.rs  high_level_tools_test.rs
tarn-mcp/tests/golden/: tools-list.json.golden
tarn/init-scaffolds/: multi-user-session.tarn.yaml  multipart-upload.tarn.yaml  polling-job.tarn.yaml
tarn/src/: bench.rs  builtin.rs  capture.rs  config.rs  cookie.rs  env.rs  error.rs  fixtures.rs  format.rs  http.rs  interpolation.rs  lib.rs  main.rs  model.rs  outline.rs  parser.rs  path_util.rs  regex_cache.rs  runner.rs  scripting.rs  selector.rs  update.rs  validation.rs  watch.rs
tarn/src/assert/: body.rs  duration.rs  headers.rs  hints.rs  mod.rs  status.rs  types.rs
tarn/src/impact/: endpoint_match.rs  include_match.rs  mod.rs  path_match.rs  substring_match.rs
tarn/src/lint/: tl007_duplicate_test_name.rs
tarn/src/report/: agent_report.rs  compact.rs  concise.rs  curl.rs  diff.rs  failure.rs  fixture_writer.rs  html.rs  human.rs  inspect.rs  json.rs  json_parse.rs  junit.rs  llm.rs  mod.rs  pack_context.rs  progress.rs  rerun.rs  run_dir.rs  state_writer.rs  tap.rs
tarn/src/scaffold/: emit.rs
tarn/tests/: example_outputs.rs  fixture_writer_test.rs  integration_test.rs  state_json_test.rs
tarn/tests/golden/: report.html.golden
(+16 files in other folders)
