[package]
name = "tarn-lsp"
version = "0.5.1"
edition = "2021"
description = "Language Server Protocol implementation for Tarn .tarn.yaml test files"
license = "MIT"
repository = "https://github.com/NazarKalytiuk/hive"
homepage = "https://github.com/NazarKalytiuk/hive"
documentation = "https://nazarkalytiuk.github.io/tarn/lsp.html"
readme = "../README.md"
keywords = ["lsp", "api", "testing", "cli", "tarn"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "tarn_lsp"
path = "src/lib.rs"

[[bin]]
name = "tarn-lsp"
path = "src/main.rs"

[dependencies]
tarn = { version = "0.5.0", path = "../tarn" }
lsp-server = "0.7"
lsp-types = "0.95"
# lsp-server uses crossbeam-channel under the hood. We depend on it
# explicitly so the main loop can call `recv_timeout` and distinguish
# Timeout from Disconnected without reaching into lsp-server internals.
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
