[package]
name = "tarn-lsp"
version = "0.5.14"
edition = "2021"
description = "Language Server Protocol implementation for Tarn .tarn.yaml test files"
license = "MIT"
repository = "https://github.com/NazarKalytiuk/hive"
homepage = "https://nazarkalytiuk.github.io/hive/"
documentation = "https://github.com/NazarKalytiuk/hive/blob/main/docs/TARN_LSP.md"
readme = "../README.md"
keywords = ["lsp", "api", "testing", "cli", "tarn"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "tarn_lsp"
path = "src/lib.rs"

[[bin]]
name = "tarn-lsp"
path = "src/main.rs"

[dependencies]
tarn = { version = "0.5.6", path = "../tarn" }
lsp-server = "0.7"
lsp-types = "0.95"
# lsp-server uses crossbeam-channel under the hood. We depend on it
# explicitly so the main loop can call `recv_timeout` and distinguish
# Timeout from Disconnected without reaching into lsp-server internals.
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Permissive YAML parse fallback used by the completion provider when
# the full `tarn::parser` returns `Err` mid-edit (e.g. unknown field,
# missing required field). Keeps env / capture completions working
# even when the buffer would not round-trip through `tarn validate`.
serde_yaml = "0.9"

[dev-dependencies]
# Used by the workspace-index unit tests and the references integration
# tests to build throwaway tarn-yaml workspaces on disk. Already a
# transitive dev dep through `tarn`, declared explicitly here so the
# `tarn-lsp` test surface does not depend on `tarn`'s dev tree.
tempfile = "3"
