[package]
name = "tarn-mcp"
version = "0.7.0"
edition = "2021"
description = "MCP server for Tarn API testing tool"
license = "MIT"
repository = "https://github.com/NazarKalytiuk/hive"
homepage = "https://nazarkalytiuk.github.io/hive/"
documentation = "https://nazarkalytiuk.github.io/hive/mcp.html"
readme = "../README.md"
keywords = ["mcp", "api", "testing", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "tarn_mcp"
path = "src/lib.rs"

[[bin]]
name = "tarn-mcp"
path = "src/main.rs"

[dependencies]
tarn = { version = "0.7.0", path = "../tarn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
