[package]
name = "tarn-mcp"
version = "0.11.4"
edition = "2021"
description = "MCP server for Tarn API testing tool"
license = "MIT"
repository = "https://github.com/NazarKalytiuk/tarn"
homepage = "https://nazarkalytiuk.github.io/tarn/"
documentation = "https://nazarkalytiuk.github.io/tarn/mcp.html"
readme = "../README.md"
keywords = ["mcp", "api", "testing", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "tarn_mcp"
path = "src/lib.rs"

[[bin]]
name = "tarn-mcp"
path = "src/main.rs"

[dependencies]
tarn = { version = "0.11.4", path = "../tarn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `chrono` is re-used for run_id generation + run artifact timestamps.
# Matches the version tarn itself pins so there is no version skew.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
