[package]
name = "tarn"
version = "0.1.0"
edition = "2021"
description = "CLI-first API testing tool"

[[bin]]
name = "tarn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json_path = "0.7"
regex = "1"
colored = "3"
similar = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
glob = "0.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
rayon = "1"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
jsonschema = "0.28"
