[package]
name = "tarn"
version = "0.5.2"
edition = "2021"
description = "CLI-first API testing tool"
license = "MIT"
repository = "https://github.com/NazarKalytiuk/hive"
homepage = "https://github.com/NazarKalytiuk/hive"
documentation = "https://nazarkalytiuk.github.io/tarn/"
readme = "../README.md"
keywords = ["api", "testing", "cli", "http", "graphql"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "tarn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
yaml-rust2 = { version = "0.11", default-features = false }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json_path = "0.7"
regex = "1"
colored = "3"
similar = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
serde_urlencoded = "0.7"
glob = "0.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
rayon = "1"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
md5 = "0.8"
base64 = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
jsonschema = "0.28"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = "0.23"
